Coding style changes.